--- a/carrinho_vanilla/index.html
+++ b/carrinho_vanilla/index.html
@@ -17,84 +17,7 @@
       <div class="row">
         <div class="col-sm-8">
           <div class="row loja">
-            <div class="col-sm-4 mb-3">
-              <div class="card ">
-                <div class="card loja__item">
-                  <img src="https://lorempixel.com/500/300" class="card-img-top" alt="" />
-                  <div class="card-body">
-                    <h5 class="card-title">JS Raiz para FW</h5>
-                    <small>R$ 300,00</small>
-                    <p class="card-text">O melhor curso do mundo.</p>
-                    <button data-value="300" class="btn btn-primary">Adicionar </button>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- col-sm-4 -->
-            <div class="col-sm-4 mb-3">
-              <div class="card ">
-                <div class="card loja__item">
-                  <img src="https://lorempixel.com/500/300" class="card-img-top" alt="" />
-                  <div class="card-body">
-                    <h5 class="card-title">JS Raiz para FW</h5>
-                    <small>R$ 300,00</small>
-                    <p class="card-text">O melhor curso do mundo.</p>
-                    <button data-value="300" class="btn btn-primary">Adicionar </button>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- col-sm-4 -->
-            <div class="col-sm-4 mb-3">
-              <div class="card ">
-                <div class="card loja__item">
-                  <img src="https://lorempixel.com/500/300" class="card-img-top" alt="" />
-                  <div class="card-body">
-                    <h5 class="card-title">JS Raiz para FW</h5>
-                    <small>R$ 300,00</small>
-                    <p class="card-text">O melhor curso do mundo.</p>
-                    <button data-value="300" class="btn btn-primary">Adicionar </button>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- col-sm-4 -->
-            <div class="col-sm-4 mb-3">
-              <div class="card ">
-                <div class="card loja__item">
-                  <img src="https://lorempixel.com/500/300" class="card-img-top" alt="" />
-                  <div class="card-body">
-                    <h5 class="card-title">JS Raiz para FW</h5>
-                    <small>R$ 300,00</small>
-                    <p class="card-text">O melhor curso do mundo.</p>
-                    <button data-value="300" class="btn btn-primary">Adicionar </button>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- col-sm-4 -->
-            <div class="col-sm-4 mb-3">
-              <div class="card ">
-                <div class="card loja__item">
-                  <img src="https://lorempixel.com/500/300" class="card-img-top" alt="" />
-                  <div class="card-body">
-                    <h5 class="card-title">JS Raiz para FW</h5>
-                    <small>R$ 300,00</small>
-                    <p class="card-text">O melhor curso do mundo.</p>
-                    <button data-value="300" class="btn btn-primary">Adicionar </button>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- col-sm-4 -->
-            <div class="col-sm-4 mb-3">
-              <div class="card ">
-                <div class="card loja__item">
-                  <img src="https://lorempixel.com/500/300" class="card-img-top" alt="" />
-                  <div class="card-body">
-                    <h5 class="card-title">JS Raiz para FW</h5>
-                    <small>R$ 300,00</small>
-                    <p class="card-text">O melhor curso do mundo.</p>
-                    <button data-value="300" class="btn btn-primary">Adicionar </button>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- col-sm-4 -->
+           
             
            </div>
         </div>
@@ -140,6 +63,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="js/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
