--- a/carrinho_vanilla/index.html
+++ b/carrinho_vanilla/index.html
@@ -25,32 +25,18 @@
           <div class="carrinho">
             <div class="carrinho__itens">
 
-              <div class="card carrinho__item">
-                <div class="card-body">
-                  <h5 class="card-title">JS Raiz para FW</h5>
-                  <p class="card-text">Preço unidade : R$300,00 | Quantidade: 1 </p>
-                  <p class="card-text">O melhor curso do mundo.</p>
-                  <button data-value="300" class="btn btn-danger btn-sm">Remover </button>
-                </div>
-              </div>
+              <!--
+                <div class="card carrinho__item">
+                  <div class="card-body">
+                    <h5 class="card-title">JS Raiz para FW</h5>
+                    <p class="card-text">Preço unidade : R$300,00 | Quantidade: 1 </p>
+                    <p class="card-text">O melhor curso do mundo.</p>
+                    <button data-value="300" class="btn btn-danger btn-sm">Remover </button>
+                  </div>
+                </div> -->
 
-              <div class="card carrinho__item">
-                <div class="card-body">
-                  <h5 class="card-title">JS Raiz para FW</h5>
-                  <p class="card-text">Preço unidade : R$300,00 | Quantidade: 1 </p>
-                  <p class="card-text">O melhor curso do mundo.</p>
-                  <button data-value="300" class="btn btn-danger btn-sm">Remover </button>
-                </div>
-              </div>
 
-              <div class="card carrinho__item">
-                <div class="card-body">
-                  <h5 class="card-title">JS Raiz para FW</h5>
-                  <p class="card-text">Preço unidade : R$300,00 | Quantidade: 1 </p>
-                  <p class="card-text">O melhor curso do mundo.</p>
-                  <button data-value="300" class="btn btn-danger btn-sm">Remover </button>
-                </div>
-              </div>
+
             </div>
             <div class="carrinho__total mt-3 p-3">
               <h6>Total <strong>R$ 600,00 </strong></h6>
