--- a/carrinho_vanilla/index.html
+++ b/carrinho_vanilla/index.html
@@ -39,7 +39,7 @@
 
             </div>
             <div class="carrinho__total mt-3 p-3">
-              <h6>Total <strong>R$ 600,00 </strong></h6>
+              <h6> <strong> Carrinho Vazio</strong></h6>
             </div>
           
           </div>
